force-app/main/default/objects/Seat__c/Seat__c.object-meta.xml
<CustomObject>
    <label>Seat</label>
    <nameField>
        <label>Seat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>