force-app/main/default/objects/Seat__c/fields/Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <formula>TEXT(Status__c) = &quot;Available&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Available</label>
    <type>Checkbox</type>
</CustomField>