force-app/main/default/objects/Seat__c/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <label>Row</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>