force-app/main/default/objects/Seat__c/fields/Seat_Type__c.field-meta.xml
<CustomField>
    <fullName>Seat_Type__c</fullName>
    <label>Seat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Wheelchair</fullName>
            </value>
            <value>
                <fullName>Companion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>