force-app/main/default/objects/Seat__c/fields/Showtime__c.field-meta.xml
<CustomField>
    <fullName>Showtime__c</fullName>
    <label>Showtime</label>
    <referenceTo>Showtime__c</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>