force-app/main/default/objects/Seat__c/validationRules/Unique_Seat_Per_Showtime.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Seat_Per_Showtime</fullName>
    <active>false</active>
    <description>Seat combination of Row, Number, and Showtime must be unique</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>This seat (Row + Number) already exists for this showtime.</errorMessage>
</ValidationRule>